[package]
name = "postgres"
version = "0.15.3"
authors = ["Sune Kirkeby <ski@csis.dk", "Steven Fackler <sfackler@gmail.com>"]
license = "MIT"
description = "A native PostgreSQL driver"
repository = "https://github.com/sfackler/rust-postgres"
readme = "../README.md"
keywords = ["database", "postgres", "postgresql", "sql"]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md", "THIRD_PARTY"]
categories = ["database"]

[package.metadata.docs.rs]
features = [
    "with-bit-vec",
    "with-chrono",
    "with-eui48",
    "with-geo",
    "with-rustc-serialize",
    "with-serde_json",
    "with-time",
    "with-uuid",
    "with-openssl",
    "with-native-tls",
]

[badges]
circle-ci = { repository = "sfackler/rust-postgres" }

[lib]
name = "postgres"
path = "src/lib.rs"
test = false
bench = false

[[test]]
name = "test"
path = "tests/test.rs"

[features]
with-bit-vec = ["postgres-shared/with-bit-vec"]
with-chrono = ["postgres-shared/with-chrono"]
with-eui48 = ["postgres-shared/with-eui48"]
with-geo = ["postgres-shared/with-geo"]
with-rustc-serialize = ["postgres-shared/with-rustc-serialize"]
with-serde_json = ["postgres-shared/with-serde_json"]
with-time = ["postgres-shared/with-time"]
with-uuid = ["postgres-shared/with-uuid"]

with-openssl = ["openssl"]
with-native-tls = ["native-tls"]
with-schannel = ["schannel"]
with-security-framework = ["security-framework"]

no-logging = []

[dependencies]
bytes = "*"
fallible-iterator = "*"
log = "*"
socket2 = "*"

openssl = { version = "*", optional = true }
native-tls = { version = "*", optional = true }
rustc-serialize = { version = "*", optional = true }
schannel = { version = "*", optional = true }
security-framework = { version = "*", optional = true }

postgres-protocol = { version = "*" }
postgres-shared = { version = "*" }

[dev-dependencies]
hex = "*"
url = "*"

bit-vec = "*"
chrono = "*"
eui48 = "*"
geo = "*"
rustc-serialize = "*"
serde_json = "*"
time = "*"
uuid = "*"
